--- a/app/audio/audio.module.scss
+++ b/app/audio/audio.module.scss
@@ -1,18 +1,69 @@
-.main-div {
+.container {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
-.first-div {
-  width: 200px;
-  height: 200px;
-  border: 1px red solid;
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
-.second-div {
-  width: 200px;
-  height: 200px;
-  border: 1px red solid;
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
-.img {
-  width: 200px;
-  height: 200px;
-  border: 1px red solid;
+
+.main {
+  display: flex;
+  gap: 50px;
+}
+.image {
+  width: 500px;
+  height: 500px;
+  border: 1px solid black;
+}
+
+.tittle {
+  width: 400px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.quires {
+  width: 400px;
+}
+.audio {
+  width: 500px;
+  
+}
+.play {
+  width: 150px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: green;
+  color: white;
+  font-size: 20px;
+}
+.pause {
+  width: 150px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: green;
+  margin-left: 30px;
+  margin-right: 30px;
+  color: white;
+  font-size: 20px;
+}
+.download {
+  width: 150px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: green;
+  color: white;
+  font-size: 20px;
 }
